# FirstProject

./: CMakeLists.txt  README.md  factorial.cpp.html  index.html  main.cpp  pl2.cpp.html
headers/: pl2.h  pl3.h
sources/: factorial.cpp  pl2.cpp  pl3.cpp
